# cw_image_stitching

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  panorama.cpp
test/: CMakeLists.txt  prepare_split_images.cpp  ssim_test.cpp
